# Jogo_cobrinha

./: CMakeLists.txt  README.md
include/: skins.hpp
src/: main.cpp
